# oraganizations-rest-api

./: .env.example  Dockerfile  README.md  docker-compose.yml  init_postgis.sql  pyproject.toml  start.sh  test-task.md  test_data.sql
app/: main.py
app/DB/: __init__.py  db.py  models.py
app/DB/migrations/: env.py
app/DB/migrations/versions/: 070ff82e2d77_0001.py
app/api/: dependencies.py  exceptions.py
app/api/exception_responses/: responses.py
app/api/routers/: organization_routes.py  token_routes.py
app/api/v1/controllers/: __init__.py  organization_routes.py  token_routes.py
app/core/: __init__.py  custom_exceptions.py  logs.py  pydantic_schemas.py  settings.py
app/core/configs/: __init__.py  settings.py
app/core/models/pydantic_models/: __init__.py  adress_pydantic_models.py  organization_pydantic_models.py  token_pydantic_models.py
app/core/models/sqlalchemy_models/: __init__.py  activities_sql_model.py  base_sql_model.py  buildings_sql_model.py  organization_activities_sql_model.py  organization_phones_sql_model.py  organizations_sql_model.py  (+3 more)
app/core/utils/: __init__.py  snakecase.py
app/dependencies/providers/: repo_providers.py  service_provider.py
app/middleware/: check_token_valid.py  logger.py
app/repositories/: __init__.py  organization_repo.py  token_repo.py
app/services/: __init__.py  mixins_service.py  organization_service.py  token_service.py
migrations/: env.py
migrations/versions/: 8bfc6c7fff9b_first.py
tests/: __init__.py  conftest.py
tests/integration/: test_organization.py
tests/unit/: test_snakecase.py
(+6 files in other folders)
